feat(Github Action): Add all version in test action (#292)

--- a/src/lualib/luajit/CMakeLists.txt
+++ b/src/lualib/luajit/CMakeLists.txt
@@ -29,6 +29,13 @@
 
 project ( lua C )
 
+# Remove -Werror from flags for LuaJIT compilation
+string(REGEX REPLACE "-Werror" "" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
+string(REGEX REPLACE "-Werror" "" CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
+# Also remove any warning-as-error flags
+string(REGEX REPLACE "-Wno-error=[^ ]*" "" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
+string(REGEX REPLACE "-Wno-error=[^ ]*" "" CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
+
 # Download source
 include(FetchContent)
 FetchContent_Declare(
@@ -131,7 +138,7 @@ if (UNIX OR APPLE)
     add_custom_command(
       OUTPUT ${LUAJIT_LIB_PATH}
       # COMMAND $(MAKE) -C ${LUA_BIN_FOLDER} PREFIX=${LUA_INSTALL_PATH}
-      COMMAND $(MAKE) -C ${LUA_BIN_FOLDER} install PREFIX=${LUA_INSTALL_PATH}
+      COMMAND $(MAKE) -C ${LUA_BIN_FOLDER} install PREFIX=${LUA_INSTALL_PATH} "CFLAGS=-O2 -fomit-frame-pointer -Wno-empty-body -Wno-unused-parameter -Wno-unused-variable -Wno-unused-function -Wno-sign-compare -Wno-string-plus-int"
     )
   # endif()
   add_custom_target(luajit_target DEPENDS ${LUAJIT_LIB_PATH})
